# ros-proto

./: .gitignore  package.xml  pb_listener.cpp  pb_talker.cpp
my_cpp_folder/: code  my_code.cpp
my_cpp_test/: auto.cc  functional.cc  override_final.cc  vd  virtual_destruction.cc  virtual_inheritance.cc
sample_protos/: publish_info.proto
test/: test_proto.cpp
test/proto/: CMakeLists.txt  mylcj.proto
