<?xml version="1.0"?>
<package>
  <name>myproject</name>
  <version>0.0.0</version>
  <description>proto sample package</description>
  <maintainer email="1165980433@qq.com">mylcj</maintainer>
  <license>mylcj license</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
